Add JavaScript onclick functionality to About Me subtitles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="./favicon/manifest.json">
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
-    <script src="js/app.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 </head>
 
     <nav>
@@ -38,7 +38,7 @@
 
     <section class="blocks">
         <span class="article-sizing"><article id="first">
-            <h2 class="about_me_header">Brief biography</h2>
+            <h2 class="about_me_header" id="titleSwitch1">Brief biography</h2>
 
             <table>
 
@@ -61,7 +61,7 @@
             </table>
             <br><br>
 
-            <h2 class="about_me_header">You're most likely to find me doing one of the following things</h2>
+            <h2 class="about_me_header" id="titleSwitch2">You're most likely to find me doing one of the following things</h2>
             <ul>
                 <li><p><span class="boldBlue" id="bb1">Coding</span></p></li>
                 <li><p><span class="secondList">Reading about</span> <span class="boldBlue" id="bb2">start-ups</span> <span class="secondList">and/or</span> <span class="boldBlue" id="bb3">the sharing economy</span></p></li>
@@ -97,6 +97,7 @@
 
         <span class="article-sizing"><article>
             <h2>Tutoring</h2>
+
             <p> I have a particular passion for teaching and have already begun <span class="imptext">free tutoring
             sessions</span> for two kids in London. I have years of experience <span class="imptext">working with children</span>, am deeply
             skilled at teaching <span class="imptext">STEM topics</span>, and
