--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=320, initial-scale=1">
+    <!-- Link to CSS -->
     <title>Colin</title>
+    <!-- Link to CSS -->
     <link rel="stylesheet" type="text/css" href="css/autoPrefixStyle.css">
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto|Cabin+Sketch|Libre+Franklin|Playfair+Display|Cinzel|Raleway" rel="stylesheet">
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="./favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="./favicon/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="./favicon/manifest.json">
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <!-- Link to JS file -->
     <script type="text/javascript" src="./js/app.js"></script>
 </head>
 
+<!-- Create navbar outside of main body so that it takes up whole page width -->
     <nav>
         <ul>
         <li style="padding: 0 20px 0 20px"><a href="#about_me">About Me</a></li>
@@ -29,9 +35,12 @@
         </ul>
     </nav>
 
+<!-- Begin body element to hold most other elements on the page -->
 <body>
+<!-- Wrapper class element constrains the width of the content-holding part of the page -->
     <div class="wrapper">
 
+<!-- Add subtitle -->
     <section class="subtitle" id="about_me">
         <div>About Me</div>
     </section>
@@ -40,6 +49,7 @@
         <span class="article-sizing"><article id="first">
             <h2 class="about_me_header" id="titleSwitch1">Brief biography</h2>
 
+<!-- Add table in order to properly align the years with their descriptions -->
             <table>
 
                 <tr>
@@ -61,6 +71,7 @@
             </table>
             <br><br>
 
+<!-- Use two different classes here, "boldBlue" and "secondList" in order to have different effects. Also add id's in order to stagger the appearance of the elements on the page -->
             <h2 class="about_me_header" id="titleSwitch2">You're most likely to find me doing one of the following things</h2>
             <ul>
                 <li><p><span class="boldBlue" id="bb1">Coding</span></p></li>
@@ -75,9 +86,11 @@
             </ul>
         </article></span>
 
+<!-- Add Alaska image in, with onmouseover and onmouseout effects included to change the picture when the user scrolls over the image -->
         <span style="align-self: center; flex: 1 1"><img src="img/Alaska6.jpg" onmouseover="this.src='img/Flip2.png'" onmouseout="this.src='img/Alaska6.jpg'" alt="Colin in Alaska"></span>
     </section>
 
+<!-- Previous section has ended, begin new section -->
     <section class="subtitle" id="community">
         <div>Helping My Community</div>
     </section>
@@ -205,8 +218,10 @@
 
     </div>
 
+<!-- Add final box at bottom of page for aesthetic purposes -->
         <div class = "flex-container">
             <div class = "box one"></div>
         </div>
+<!-- Close out the body and html tags and we're done! -->
 </body>
 </html>
